# SAP-HANA-AutoML

./: .gitignore  .pypirc  CODE_OF_CONDUCT.md  Compare_with_APL.ipynb  Dockerfile  LICENSE  README.md  Untitled.ipynb  automl.py  cleaned_train.csv  cli.py  comparison_openml.ipynb  comparsion_openml.ipynb  error.py  impsettings.py  input.py  logger.py  main.py  models.py  optimizer.py  pipeline.py  preprocessing.py  preprocessor.py  pyproject.toml  requirements.txt  web.py
.circleci/: config.yaml  config.yml
.github/workflows/: python-app.yml
algorithms/: base_algo.py  classification.py  regression.py
algorithms/classification/: DecisionTree.py  decisiontree.py  decisiontreecls.py  gradboostcls.py  hybgradboostcls.py  kneighbors.py  kneighborscls.py  mlpcl.py  (+8 more)
benchmarks/: Compare_with_APL.ipynb  cleanup.py  comparison_openml.ipynb  perfomance.py
config/: run.yaml
configs/: start.yaml
data/: bank.csv  bank_test.csv  bank_train.csv  cleaned_train.csv  heart.csv  iris.csv  reg.csv  test_cleaned_train.csv
hana_automl/: __init__.py  automl.py  cli.py  main.py  storage.py  web.py
optimizers/: base_optimizer.py  baseoptimizer.py  bayes.py  grid_search.py  optuna_optimizer.py
pipeline/: data.py  fit.py  input.py  input_.py  leaderboard.py  modelres.py  pipeline.py  validator.py
preprocess/: impsettings.py  preprocessor.py
src/: README.md  automl.py  main.py
tests/: connection.py  input_test.py  test.py  test_automl.py  test_preprocessor.py  test_whole_automl.py
utils/: connection.py  error.py  tables.txt
web/: cache.py  session.py  utility.py  web.py
(+121 files in other folders)
